<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/card_styles"
        app:cardCornerRadius="11dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/jobProfileCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/dummyName"
                android:textColor="@color/black_shade_1"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailDetails"
                android:layout_below="@+id/userName"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:textSize="14sp">

                <ImageView
                    android:layout_width="19sp"
                    android:layout_height="19sp"
                    android:layout_marginRight="6dp"
                    android:contentDescription="email_icon"
                    android:src="@drawable/email_icon_blue" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:color="@color/white"
                    android:text="@string/dummyEmail"
                    android:textColor="@color/black_shade_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailDetails"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:textSize="14sp">

                <ImageView
                    android:layout_width="19sp"
                    android:layout_height="19sp"
                    android:layout_marginRight="6dp"
                    android:contentDescription="phone_icon"
                    android:src="@drawable/phone_icon_blue" />

                <TextView
                    android:id="@+id/userPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:color="@color/white"
                    android:text="@string/dummyPhoneNumber"
                    android:textColor="@color/black_shade_1" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>